--- a/Part2/Part2B_Basics.html
+++ b/Part2/Part2B_Basics.html
@@ -554,6 +554,14 @@ sp</code></pre></div>
 ## 3                 4,5        *         2              4.5</code></pre>
 <p>Note that we need to call <code>lengths(score)</code> instead of <code>length(score)</code> because <code>score</code> is actually a list-like object in the aggregation expression.</p>
 </div>
+<div id="exercises-5-min" class="section level2">
+<h2>Exercises (5 min)</h2>
+<ol style="list-style-type: decimal">
+<li>What are the chromosome lengths of the mouse <code>mm9</code> genome assembly?</li>
+<li>Split the GRanges object <code>gr</code> by chromosome, and compute the mean GC content for each chromosome.</li>
+<li>Install the TxDb package for the yeast (<em>Saccharomyces cerevisiae</em>) <code>sacCer3</code> genome assembly. How many genes are there on each chromosome?</li>
+</ol>
+</div>
 </div>
 
 
